force-app/main/default/objects/Actions__c/fields/Action_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Action_Purpose__c</fullName>
    <label>Action Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BackImpact Certificate</fullName>
            </value>
            <value>
                <fullName>BackImpact Registration</fullName>
            </value>
            <value>
                <fullName>Correct carrier invalid</fullName>
            </value>
            <value>
                <fullName>Correct fulfilled too late</fullName>
            </value>
            <value>
                <fullName>Correct invalid tracking number</fullName>
            </value>
            <value>
                <fullName>Correct orders not picked up</fullName>
            </value>
            <value>
                <fullName>Improve Cancellation Rate</fullName>
            </value>
            <value>
                <fullName>Improve Csat</fullName>
            </value>
            <value>
                <fullName>Improve Csat / NRR</fullName>
            </value>
            <value>
                <fullName>Improve defective / accessories rate</fullName>
            </value>
            <value>
                <fullName>Improve defective / NRR</fullName>
            </value>
            <value>
                <fullName>Improve LRR</fullName>
            </value>
            <value>
                <fullName>Improve OTD</fullName>
            </value>
            <value>
                <fullName>Improve OTD/OTS</fullName>
            </value>
            <value>
                <fullName>Improve Untracked Rate</fullName>
            </value>
            <value>
                <fullName>Open new countries</fullName>
            </value>
            <value>
                <fullName>Optimize customer care costs</fullName>
            </value>
            <value>
                <fullName>Optimize logistic costs</fullName>
            </value>
            <value>
                <fullName>Optimize shipping costs</fullName>
            </value>
            <value>
                <fullName>Optimize sourcing</fullName>
            </value>
            <value>
                <fullName>Product category with high GMV potential</fullName>
            </value>
            <value>
                <fullName>Push Action(s)</fullName>
            </value>
            <value>
                <fullName>Reduce After Sales Costs</fullName>
            </value>
            <value>
                <fullName>Scale for Holiday Season</fullName>
            </value>
            <value>
                <fullName>To source more well-priced products and grow their BM GMV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>