force-app/main/default/objects/Actions__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alert</label>
    <referenceTo>Alert__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>