force-app/main/default/objects/Actions__c/fields/Merchant_FAQ__c.field-meta.xml
<CustomField>
    <fullName>Merchant_FAQ__c</fullName>
    <label>Merchant FAQ</label>
    <type>Url</type>
</CustomField>