force-app/main/default/objects/Actions__c/fields/Merchant_s_ETA__c.field-meta.xml
<CustomField>
    <fullName>Merchant_s_ETA__c</fullName>
    <label>Merchant&apos;s ETA</label>
    <type>Date</type>
</CustomField>