force-app/main/default/objects/Actions__c/fields/Notion_Article__c.field-meta.xml
<CustomField>
    <fullName>Notion_Article__c</fullName>
    <label>Notion Article</label>
    <type>Url</type>
</CustomField>