force-app/main/default/objects/Actions__c/fields/Opportunity_promise_volume__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_promise_volume__c</fullName>
    <label>Opportunity promise (volume)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>