force-app/main/default/objects/Actions__c/fields/Pitched__c.field-meta.xml
<CustomField>
    <fullName>Pitched__c</fullName>
    <formula>IF(

OR(
ISPICKVAL( Stage__c ,&quot;Merchant OK&quot;),
ISPICKVAL( Stage__c ,&quot;Merchant KO&quot;),
ISPICKVAL( Stage__c ,&quot;Negotiation&quot;)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pitched</label>
    <type>Checkbox</type>
</CustomField>