force-app/main/default/objects/Actions__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already have resources to handle after sales</fullName>
            </value>
            <value>
                <fullName>Already have resources to handle repair based in EU</fullName>
            </value>
            <value>
                <fullName>Already providing Quality after sales with good C.SAT</fullName>
            </value>
            <value>
                <fullName>Closed for pass due date</fullName>
            </value>
            <value>
                <fullName>Couldn&apos;t reach the merchant</fullName>
            </value>
            <value>
                <fullName>Does not trust our carriers</fullName>
            </value>
            <value>
                <fullName>Does not trust our partner</fullName>
            </value>
            <value>
                <fullName>Does not want to lock stock for Back Market</fullName>
            </value>
            <value>
                <fullName>Does not want to outsource</fullName>
            </value>
            <value>
                <fullName>Does not want to outsource insurance requests</fullName>
            </value>
            <value>
                <fullName>Does not want to outsource Shipping / Storage</fullName>
            </value>
            <value>
                <fullName>Do not want to outsource Return &amp; refund</fullName>
            </value>
            <value>
                <fullName>Expensive Label Cost</fullName>
            </value>
            <value>
                <fullName>Fears for impact on OTS / OTD</fullName>
            </value>
            <value>
                <fullName>Has better prices</fullName>
            </value>
            <value>
                <fullName>Has better shipping prices</fullName>
            </value>
            <value>
                <fullName>Have better prices</fullName>
            </value>
            <value>
                <fullName>I already have a CSR certificate (To add the name in comments)</fullName>
            </value>
            <value>
                <fullName>I don&apos;t understand what are the benefits for my business</fullName>
            </value>
            <value>
                <fullName>I have the similar product but with different characteristics</fullName>
            </value>
            <value>
                <fullName>Integrators no willing to correct the issue</fullName>
            </value>
            <value>
                <fullName>Not Convinced with Service (Prefers Swap/Refund)</fullName>
            </value>
            <value>
                <fullName>Not happy with the actions of BC agents</fullName>
            </value>
            <value>
                <fullName>Not satisfied with the other BM services</fullName>
            </value>
            <value>
                <fullName>Not the right timing but I want to do it later</fullName>
            </value>
            <value>
                <fullName>Not willing to change carrier (carrier has attractive prices)</fullName>
            </value>
            <value>
                <fullName>Not willing to change carrier (trust it&apos;s efficiency)</fullName>
            </value>
            <value>
                <fullName>Higher % of Diversification Orders</fullName>
            </value>
            <value>
                <fullName>Satisfied with his current solution</fullName>
            </value>
            <value>
                <fullName>Too expensive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>