force-app/main/default/objects/Actions__c/fields/Sales_Pitch__c.field-meta.xml
<CustomField>
    <fullName>Sales_Pitch__c</fullName>
    <label>Sales Pitch</label>
    <type>Url</type>
</CustomField>