force-app/main/default/objects/Actions__c/fields/Service_Live_In__c.field-meta.xml
<CustomField>
    <fullName>Service_Live_In__c</fullName>
    <inlineHelpText>Please select the countries that merchant went live in.</inlineHelpText>
    <label>Service Live In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Targeted_Country</valueSetName>
    </valueSet>
</CustomField>