force-app/main/default/objects/Actions__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Answer BackImpact Audit</fullName>
            </value>
            <value>
                <fullName>Change Carrier</fullName>
                <isActive>false</isActive>
                <label>Change Carrier</label>
            </value>
            <value>
                <fullName>Fill in the right carrier / unique tracking information (no duplicates)</fullName>
            </value>
            <value>
                <fullName>Fill in the right tracking informations</fullName>
            </value>
            <value>
                <fullName>Fill in the tracking information within 5 days after order creation</fullName>
            </value>
            <value>
                <fullName>Lower buffer delay to match carrier real performances</fullName>
                <isActive>false</isActive>
                <label>Lower buffer delay to match carrier real performances</label>
            </value>
            <value>
                <fullName>Lower Shipping Delay</fullName>
                <isActive>false</isActive>
                <label>Lower Shipping Delay</label>
            </value>
            <value>
                <fullName>Push Audio</fullName>
            </value>
            <value>
                <fullName>Push BackCare</fullName>
            </value>
            <value>
                <fullName>Push BackPack</fullName>
            </value>
            <value>
                <fullName>Push BackParts</fullName>
            </value>
            <value>
                <fullName>Push BackRepair</fullName>
            </value>
            <value>
                <fullName>Push BackShip</fullName>
            </value>
            <value>
                <fullName>Push BuyBack</fullName>
            </value>
            <value>
                <fullName>Push Core Elec Models</fullName>
            </value>
            <value>
                <fullName>Push country(s) live</fullName>
            </value>
            <value>
                <fullName>Push FBBM</fullName>
            </value>
            <value>
                <fullName>Push good pricing</fullName>
            </value>
            <value>
                <fullName>Push RAAS</fullName>
            </value>
            <value>
                <fullName>Push Small Kitchen Appliances</fullName>
            </value>
            <value>
                <fullName>Reduce Preparation Time</fullName>
                <isActive>false</isActive>
                <label>Reduce Preparation Time</label>
            </value>
            <value>
                <fullName>Register for BackImpact Label</fullName>
            </value>
            <value>
                <fullName>Ship the orders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>