force-app/main/default/objects/Actions__c/recordTypes/Push_Action.recordType-meta.xml
<RecordType>
    <fullName>Push_Action</fullName>
    <active>true</active>
    <label>Push Action</label>
</RecordType>