force-app/main/default/objects/Actions__c/recordTypes/Push_Service.recordType-meta.xml
<RecordType>
    <fullName>Push_Service</fullName>
    <active>true</active>
    <label>Push Service</label>
</RecordType>