force-app/main/default/objects/Actions__c/validationRules/Require_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Comment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Stage__c,&quot;Merchant KO&quot;),
ISPICKVAL( Reason__c ,&quot;Other (add to Comment)&quot;),
ISBLANK( Comment__c ))</errorConditionFormula>
    <errorDisplayField>Comment__c</errorDisplayField>
    <errorMessage>Please use Comment to explain the outcome of the Action.</errorMessage>
</ValidationRule>