force-app/main/default/objects/Actions__c/validationRules/Require_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( Contact__c ),
ISPICKVAL( Stage__c ,&quot;Merchant OK&quot;),
ISPICKVAL ( Type__c ,&quot;Push BackRepair&quot;)
)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Please add Contact you want to send Back Repair contract for signature to.</errorMessage>
</ValidationRule>