force-app/main/default/objects/Actions__c/validationRules/Require_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL(Stage__c,&quot;Merchant KO&quot;),ISPICKVAL(Stage__c,&quot;No Action by Due Date&quot;)),
ISBLANK(TEXT(  Reason__c  )))</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Please add the reason to refuse the Action.</errorMessage>
</ValidationRule>