force-app/main/default/objects/Actions__c/validationRules/Require_Service_Live_In.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Service_Live_In</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Stage__c,&quot;Merchant OK&quot;),
ISPICKVAL( Type__c ,&quot;Push BackCare&quot;),
ISBLANK(  Service_Live_In__c ))</errorConditionFormula>
    <errorDisplayField>Service_Live_In__c</errorDisplayField>
    <errorMessage>Please specify the countries service is live in.</errorMessage>
</ValidationRule>